Hide search once search is done, fix whitespace

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,6 @@
 
 @layer components {
     .tooltip {
-        @apply absolute pointer-events-none bg-neutral-900 p-3 rounded text-white;
+        @apply absolute pointer-events-none bg-neutral-900 p-3 rounded text-white hidden;
     }
 }
